# nbdos

./: Cargo.toml  config.yaml.example  nbdos.service
.github/workflows/: build.yml
src/: config.rs  main.rs
src/cache/: disk_cache.rs  memory_cache.rs  mod.rs
src/nbd/: handler.rs  mod.rs  protocol.rs
src/storage/: device.rs  mod.rs  s3_backend.rs
