[package]
name = "nbdos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nbdos"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-smithy-runtime-api = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
lru = "0.12"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "5"
parking_lot = "0.12"
futures = "0.3"
tokio-util = { version = "0.7" }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
